# biolinkml

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  ModelChanges.md  Pipfile  README.md  SPECIFICATION.md  UML.md  biolink-model.yaml  context.jsonld  contextn.jsonld  index.md  meta.json  meta.jsonld  meta.owl  meta.shex  meta.shexj  meta.ttl  meta.yaml  metanc.shex  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini  txt
biolinkml/: __init__.py  meta.py
docs/: AltDescription.md  Annotatable.md  Annotation.md  ClassDefinition.md  Definition.md  Element.md  EnumDefinition.md  Example.md  Extensible.md  Extension.md  LocalName.md  PermissibleValue.md  Prefix.md  SchemaDefinition.md  SlotDefinition.md  SubsetDefinition.md  TypeDefinition.md  abstract.md  alias.md  aliases.md  alt_description_source.md  alt_description_text.md  alt_descriptions.md  annotation_extension_value.md  annotations.md  apply_to.md  attributes.md  base.md  class_definition_apply_to.md  class_definition_is_a.md  class_definition_mixins.md  class_uri.md  classes.md  close_mappings.md  code_set.md  code_set_tag.md  code_set_version.md  comments.md  created_on.md  default_curi_maps.md  (+93 more)
examples/: organization-data.json  organization.context.jsonld  organization.owl.ttl  organization.py  organization.schema.json  organization.yaml
includes/: annotations.context.jsonld  annotations.jsonld  annotations.py  annotations.yaml  extensions.context.jsonld  extensions.jsonld  extensions.py  mappings.context.jsonld  mappings.jsonld  mappings.py  mappings.yaml  types.context.jsonld  types.jsonld  types.py  types.yaml
meta_mappings_docs/: ClassDefinition.md  Definition.md  Example.md  Prefix.md  SchemaDefinition.md  base.md  (+13 more)
(+2663 files in other folders)
