[metadata]
name = biolinkml
url = https://github.com/biolink/biolinkml
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = Biolink Modeling Language
home-page = http://biolink.github.io/biolinkml
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    biolink
    metamodel

[files]
packages =
    biolinkml
    includes


[entry_points]
console_scripts = 
    gen-jsonld-context = biolinkml.generators.jsonldcontextgen:cli
    gen-csv = biolinkml.generators.csvgen:cli
    gen-graphviz = biolinkml.generators.dotgen:cli
    gen-golr-views = biolinkml.generators.golrgen:cli
    gen-graphql = biolinkml.generators.graphqlgen:cli
    gen-jsonld = biolinkml.generators.jsonldgen:cli
    gen-json-schema = biolinkml.generators.jsonschemagen:cli
    gen-markdown = biolinkml.generators.markdowngen:cli
    gen-owl = biolinkml.generators.owlgen:cli
    gen-proto = biolinkml.generators.protogen:cli
    gen-py-classes = biolinkml.generators.pythongen:cli
    gen-python = biolinkml.generators.pythongen:cli
    gen-rdf = biolinkml.generators.rdfgen:cli
    gen-shex = biolinkml.generators.shexgen:cli
    gen-yuml = biolinkml.generators.yumlgen:cli
    comparefiles = biolinkml.utils.comparefiles:cli
